# travelai

./: App.vue  README.md  main.js
backend/mcp/: README.md  main.py  pyproject.toml
backend/rest_api/: pyproject.toml
backend/rest_api/src/rest_api/: booking_controller.py  chat_controller.py  db_client.py  email_controller.py  flight_controller.py  flight_fake_data.py  main.py  payment_controller.py  utils.py
backend/rest_api/templates/: booking_confirmation.html
backend/scripts/: pyproject.toml
backend/scripts/src/scripts/: airport_data.py  data_inj.py  flight_data.py
frontend/travel-ai/: index.html  package-lock.json  package.json
frontend/travel-ai/src/: App.vue  main.js
frontend/travel-ai/src/components/: BookingPersonDetails.vue  BookingView.vue  CancelPage.vue  ChatWidget.vue  FlightListView.vue  HomePage.vue  ManageBookingBar.vue  ManageBookingView.vue  PassengerDetails.vue  PaymentDetails.vue  SearchBar.vue  SplashScreen.vue  SuccessPage.vue  WeatherWidget.vue
frontend/travel-ai/src/router/: index.js
