[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "NandanaSanjith",email = "nandanasanjith2175@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.15.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "scripts", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
